fix dropdown menu shifting left on Chrome

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -166,6 +166,8 @@ h1 {
 
 .dropdown-content {
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: var(--white);
   min-width: 160px;
   overflow: auto;
